<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/nameOfTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nameOfTaskDefault"
            android:textColor="@color/colorMain"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/taskDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/taskDescriptionDefault"
            android:textColor="@color/colorMainDark" />

        <TextView
            android:id="@+id/taskLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/taskLocationDefault" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="@color/colorGrey"
            app:cardBackgroundColor="@color/lightGrey"
            app:cardCornerRadius="0dp"
            app:cardElevation="0dp"
            app:cardPreventCornerOverlap="false" />

    </LinearLayout>
</LinearLayout>