<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/startWorkBtn"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="startWorkBtnClick"
        android:text="Начать смену"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/logOutBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/pauseWorkBtn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="pauseWorkBtnClick"
        android:text="Отойти на перерыв"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/toTaskBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/logOut"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="250dp"
        app:cardBackgroundColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="240dp"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cardView2">

        <TextView
            android:id="@+id/worker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/worker"
            android:textColor="@color/colorRed"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/workerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/workerNameDefault"
            android:textAlignment="center"
            android:textColor="@color/colorGrey"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/workerPositionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="130dp"
            android:text="Должность"
            android:textColor="@color/colorRed"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/workerPosition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="100dp"
            android:text="@string/workerStatusDefault"
            android:textColor="@color/colorGrey"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/workshiftTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="50dp"
            android:text="Смена"
            android:textColor="@color/colorRed"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/workshiftInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="20dp"
            android:text="Не начата"
            android:textColor="@color/colorGrey"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/toTaskBtn"
        style="@android:style/Widget.Material.Light.Button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/rounded_button"
        android:text="@string/toTasks"
        android:textColor="@color/colorWhite"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/startWorkBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>